# LSCSimulation

./: .gitignore  CMakeLists.txt  README.md  pmt_layout.py
GLG4Sim/: CMakeLists.txt
GLG4Sim/GLG4Sim/: GLG4DeferTrackProc.hh  GLG4Ellipsoid.hh.depricated  GLG4InputDataReader.hh  GLG4NeutronDiffusionAndCapture.hh  GLG4OpAttenuation.hh  GLG4PMTOpticalModel.hh  GLG4PMTSD.hh  GLG4PhysicsList.hh.too_old  GLG4PosGen.hh  GLG4PrimaryGeneratorAction.hh  GLG4PrimaryGeneratorMessenger.hh  GLG4SteppingAction.hh  GLG4TestSolid.hh  GLG4param.hh  local_g4compat.hh
GLG4Sim/inc/: GLG4BoxSD.hh  GLG4HitPMT.hh  GLG4HitPMTCollection.hh  GLG4HitPhoton.hh  GLG4PosGen.hh  GLG4PrimaryGeneratorAction.hh  GLG4Scint.hh  GLG4VEventAction.hh  GLG4VertexGen.hh  GLG4VisManager.hh  GLG4VisMessenger.hh  GLG4_PMT_LogicalVolume.hh  local_g4compat.hh  local_g4version.hh
GLG4Sim/src/: GLG4BoxSD.cc  GLG4DeferTrackProc.cc  GLG4Ellipsoid.cc.depricated  GLG4HitPMT.cc  GLG4HitPMTCollection.cc  GLG4HitPhoton.cc  GLG4InputDataReader.cc  GLG4NeutronDiffusionAndCapture.cc  GLG4OpAttenuation.cc  GLG4PMTOpticalModel.cc  GLG4PMTSD.cc  GLG4PhysicsList.cc.too_old  GLG4PosGen.cc  GLG4PrimaryGeneratorAction.cc  GLG4PrimaryGeneratorMessenger.cc  GLG4Scint.cc  GLG4SteppingAction.cc  GLG4TestSolid.cc  GLG4TorusStack.cc  GLG4VEventAction.cc  GLG4VertexGen.cc  GLG4VisManager.cc  GLG4VisMessenger.cc  GLG4_PMT_LogicalVolume.cc  GLG4param.cc  LSCUserTrackInformation.cc
LSCSim/: CMakeLists.txt
LSCSim/LSCSim/: LSCCerenkov.hh  LSCDetectorConstruction.hh  LSCOpAttenuation.hh  LSCPMTOpticalModel.hh  LSCPMTOpticalModel.hh.ori  LSCPMTSD.hh  LSCPhysicsList.hh  LSCRecorderBase.hh  LSCRootManager.hh  LSCScintillation.hh  LSCTrackingAction.hh  LSCUserTrackInformation.hh  LSC_PMT_LogicalVolume.hh  PMTHit.hh
LSCSim/data/pmtpos/: plotgl.C  pmtpos_equiarea.C
LSCSim/data/pyscript/: pmt_layout.py  r7081.py
LSCSim/inc/: LSCDetectorConstruction.hh  LSCEmSaturation.hh  LSCEventAction.hh  LSCPMTSD.hh  LSCRootManager.hh  LSCRunAction.hh  LSCScintillation.hh  LSCSteppingAction.hh  LSCTrajectory.hh
LSCSim/mac/: default.mac  default_cylinder.mac  default_prototype.mac  default_sphere.mac  init_vis.mac  vis.mac
LSCSim/src/: LSCCerenkov.cc  LSCDetectorConstruction.cc  LSCDetectorConstruction_LSC.cc  LSCDetectorConstruction_LSC_Cylinder.cc  LSCDetectorConstruction_LSC_Sphere.cc  LSCDetectorConstruction_Prototype.cc  LSCEmSatuartion.cc  LSCEventAction.cc  LSCMaterial.cc  LSCOpAttenuation.cc  LSCPMTOpticalModel.cc  LSCPMTOpticalModel.cc.ori  LSCPMTSD.cc  LSCPhysicsList.cc  LSCRootManager.cc  LSCRunAction.cc  LSCScintillation.cc  LSCSteppingAction.cc  LSCTrackingAction.cc  LSCTrajectory.cc  LSCUserTrackInformation.cc  LSC_PMT_LogicalVolume.cc  PMTHit.cc
LSCSim/test/: lscsim.cc
MCObjs/: CMakeLists.txt
MCObjs/MCObjs/: LinkDef.h  MCEventInfo.hh  MCPMT.hh  MCPMTData.hh  MCPhotonHit.hh  MCPrimary.hh  MCPrimaryData.hh  MCScint.hh  MCScintData.hh  MCScintStep.hh  MCStep.hh  MCTrack.hh  MCTrackData.hh
MCObjs/inc/: LinkDef.h  MCEventInfo.hh  MCPMT.hh  MCPMTData.hh  MCPrimary.hh  MCPrimaryData.hh  MCScint.hh  MCScintData.hh  MCScintStep.hh  MCStep.hh  MCTrack.hh  MCTrackData.hh
MCObjs/src/: MCEventInfo.cc  MCPMT.cc  MCPMTData.cc  MCPhotonHit.cc  MCPrimary.cc  MCPrimaryData.cc  MCScint.cc  MCScintData.cc  MCScintStep.cc  MCStep.cc  MCTrack.cc  MCTrackData.cc
TrgSim/: CMakeLists.txt
TrgSim/TrgSim/: FADCWaveformGenerator.hh  LinkDef.h  PMTSignal.hh
TrgSim/inc/: AbsSignal.hh  FADCWaveformGenerator.hh  PMTSignal.hh
TrgSim/src/: AbsSignal.cc  FADCWaveformGenerator.cc  PMTSignal.cc
TrgSim/test/: digi_example.C  spe_dist.C
cmake/: FindXercesC.cmake  Qt53DCoreConfig.cmake  Qt53DExtrasConfig.cmake  Qt53DRenderConfig.cmake  Qt53DRenderConfigVersion.cmake
