set(MODULE_NAME GLG4Sim)
message(STATUS "Configuring ${MODULE_NAME} ...")

file(GLOB MODULE_HEADERS CONFIGURE_DEPENDS inc/*.hh)
file(GLOB MODULE_SOURCES CONFIGURE_DEPENDS src/*.cc)

add_library(${MODULE_NAME} SHARED
    ${MODULE_SOURCES}
)

target_include_directories(${MODULE_NAME}
    PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
    ${Geant4_INCLUDE_DIRS}
)

target_link_libraries(${MODULE_NAME}
    PUBLIC
    ${Geant4_LIBRARIES}
)

install(TARGETS ${MODULE_NAME}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
install(DIRECTORY inc/
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
    FILES_MATCHING PATTERN "*.hh"
)
